test/e2e/fail/004-missing-field/expected.stderr
error[E0004]: missing field
 --> $FILE:4:7
  |
4 | print(p.c);
  |       ^^^ no field `c` on this type
  |
